Initial inspection log role out

--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -14,6 +14,9 @@
   		<li><a href="/startupshot/create/">Create startup shots</a></li>
   	</ul>
   <li>Inspection DB</li>
+     <ul>
+         <li><a href="/inspection/">Go to part inspection page</a></li>
+     </ul>
   <li>PHL</li>
   <li>MML</li>
 </ul> 
