--- a/templates/inspection/detailJob.html
+++ b/templates/inspection/detailJob.html
@@ -5,8 +5,10 @@
     <title></title>
 </head>
 <body>
-<p> Welcome to the CIMC Inspection Page! Here is the start up shot information </p>
 
+{% load bootstrap3 %}
+{% bootstrap_css %}
+{% bootstrap_javascript %}
 
 {% include "inspection/subJobInfo.html" %}
 
