--- a/templates/inspection/subJobInfo.html
+++ b/templates/inspection/subJobInfo.html
@@ -1,5 +1,5 @@
 {% if active_job %}
-    <table>
+    <table class="table table-hover">
         <tr>
             <td>Item #</td>
             <td>Description</td>
