--- a/templates/startupshot/createStartupShot.html
+++ b/templates/startupshot/createStartupShot.html
@@ -10,10 +10,19 @@
 <h1>Create a startup shot!</h1>
 <p> Type in a part number to view already created startup shots.</p>
 
-<form action="/startupshot/create/" method="post">
+{% load bootstrap3 %}
+{% bootstrap_css %}
+{% bootstrap_javascript %}
+{# Display a form #}
+
+<form action="/startupshot/create/" method="post" class="form">
     {% csrf_token %}
-    {{ form }}
-    <input type="submit" value="Submit" />
+    {% bootstrap_form form layout='horizontal' %}
+    {% buttons %}
+        <button type="submit" class="btn btn-primary">
+            {% bootstrap_icon "star" %} Submit
+        </button>
+    {% endbuttons %}
 </form>
 
 
