--- a/templates/startupshot/index.html
+++ b/templates/startupshot/index.html
@@ -6,15 +6,24 @@
 </head>
 <body>
 
+{% load bootstrap3 %}
+{% bootstrap_css %}
+{% bootstrap_javascript %}
+{# Display a form #}
+
 <h1>This is the startup shot page!</h1>
 <p> Type in a part number to view already created startup shots.</p>
 
-<form action="/startupshot/" method="post">
-    {% csrf_token %}
-    {{ form }}
-    <input type="submit" value="Submit" />
-</form>
 
+<form action="/startupshot/" method="post" class="form">
+    {% csrf_token %}
+    {% bootstrap_form form layout='horizontal' %}
+    {% buttons %}
+        <button type="submit" class="btn btn-primary">
+            {% bootstrap_icon "star" %} Submit
+        </button>
+    {% endbuttons %}
+</form>
 
 
 </body>
