Add navigation, sitetree package, job report

--- a/templates/inspection/index.html
+++ b/templates/inspection/index.html
@@ -5,6 +5,12 @@
     <title></title>
 </head>
 <body>
+
+{% load bootstrap3 %}
+{% bootstrap_css %}
+{% bootstrap_javascript jquery=1 %}
+{% include "nav/nav.html" %}
+
 <p>Welcome to the CIMC Inspection Page! The following machines are active:</p>
 
 
