--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -1,11 +1,17 @@
 <html lang="en">
-{% load bootstrap3 %}
+
 
 <head>
     <title>My Home Page</title>
     <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/style.css" media="screen" />
 
 </head>
+
+{% load bootstrap3 %}
+{% bootstrap_css %}
+{% bootstrap_javascript jquery=1 %}
+{% include "nav/nav.html" %}
+
 <body>
 <div style="text-align:center">
     {%  load staticfiles %}
@@ -17,20 +23,6 @@
     <p> Still under construction.</p>
 </div>
 
-
-<ul>
-    <li>Startup Shot</li>
-    <ul>
-        <li><a href="/startupshot/">View startup shots</a></li>
-        <li><a href="/startupshot/create/">Create startup shots</a></li>
-    </ul>
-    <li>Inspection DB</li>
-    <ul>
-        <li><a href="/inspection/">Go to part inspection page</a></li>
-    </ul>
-    <li>PHL</li>
-    <li>MML</li>
-</ul>
 
 </body>
 </html>
