--- a/templates/inspection/detailJob.html
+++ b/templates/inspection/detailJob.html
@@ -8,7 +8,8 @@
 
 {% load bootstrap3 %}
 {% bootstrap_css %}
-{% bootstrap_javascript %}
+{% bootstrap_javascript jquery=1 %}
+{% include "nav/nav.html" %}
 
 {% include "inspection/subJobInfo.html" %}
 
