--- a/templates/startupshot/index.html
+++ b/templates/startupshot/index.html
@@ -6,10 +6,12 @@
 </head>
 <body>
 
+
 {% load bootstrap3 %}
 {% bootstrap_css %}
-{% bootstrap_javascript %}
-{# Display a form #}
+{% bootstrap_javascript jquery=1 %}
+
+{% include "nav/nav.html" %}
 
 <h1>This is the startup shot page!</h1>
 <p> Type in a part number to view already created startup shots.</p>
