--- a/templates/inspection/jobReport.html
+++ b/templates/inspection/jobReport.html
@@ -13,6 +13,8 @@
 
 {% include "inspection/subJobInfo.html" %}
 
+{% include "inspection/subSummary.html" %}
+
 {% include "inspection/subPartweight.html" %}
 
 {% include "inspection/subVisualInspection.html" %}
