--- a/templates/inspection/subPartweight.html
+++ b/templates/inspection/subPartweight.html
@@ -1,5 +1,6 @@
 {% if partWeightInspection %}
     <table class="table table-hover">
+        <caption style="text-align:center">Part Weight Log</caption>
         <tr>
             <td>Date Created</td>
             <td>Machine Operator</td>
