--- a/templates/inspection/subVisualInspection.html
+++ b/templates/inspection/subVisualInspection.html
@@ -1,5 +1,6 @@
 {% if visualInspection %}
     <table class="table table-hover">
+        <caption style="text-align:center">Visual Inspection Log</caption>
         <tr>
             <td>Date Created</td>
             <td>Machine Operator</td>
