--- a/templates/inspection/subJobInfo.html
+++ b/templates/inspection/subJobInfo.html
@@ -1,5 +1,6 @@
 {% if active_job %}
     <table class="table table-hover">
+        <caption style="text-align:center">Start Up Shot Information</caption>
         <tr>
             <td>Item #</td>
             <td>Description</td>
