Initialize part app, mold app, etc

--- a/templates/inspection/subJobInfo.html
+++ b/templates/inspection/subJobInfo.html
@@ -6,8 +6,8 @@
             <td>Description</td>
             <td>Job Number</td>
             <td>Start up part Weight</td>
+            <td>Mold ID</td>
             <td>Cavity ID</td>
-            <td>Head ID</td>
             <td>Active Cavities</td>
             <td>Machine Number</td>
         </tr>
@@ -26,10 +26,10 @@
                     {{ ep.partWeight }}
                 </td>
                 <td>
-                    {{ ep.cavityID }}
+                    {{ ep.moldNumber }}
                 </td>
                 <td>
-                    {{ ep.headID }}
+                    {{ ep.headCavID }}
                 </td>
                 <td>
                     {{ ep.activeCavities }}
