--- a/templates/inspection/subPartweight.html
+++ b/templates/inspection/subPartweight.html
@@ -20,7 +20,7 @@
                     {{ ep.inspectorName }}
                 </td>
                 <td>
-                    {{ ep.cavityID }}
+                    {{ ep.headCavID }}
                 </td>
                 <td>
                     {{ ep.partWeight }}
