--- a/templates/inspection/subVisualInspection.html
+++ b/templates/inspection/subVisualInspection.html
@@ -21,7 +21,7 @@
                     {{ ep.inspectorName }}
                 </td>
                 <td>
-                    {{ ep.cavityID }}
+                    {{ ep.headCavID }}
                 </td>
                 <td>
                     {{ ep.inspectionResult }}
