Startup shot revamp stage one. User should only input part weight

--- a/templates/startupshot/viewActive.html
+++ b/templates/startupshot/viewActive.html
@@ -18,7 +18,8 @@
 {% if activeInMattec %}
     <ul>
         {% for eachActive in activeInMattec %}
-            <li><a href="/startupshot/{{ eachActive.itemNo }}/">{{ eachActive.machNo }} - {{ eachActive.itemDesc }} </a>
+            <li><a href="/startupshot/create/{{ eachActive.jobNumber }}/">{{ eachActive.machNo }}
+                - {{ eachActive.itemDesc }} </a>
             </li>
         {% endfor %}
     </ul>
