--- a/templates/startupshot/createStartupShot.html
+++ b/templates/startupshot/createStartupShot.html
@@ -11,8 +11,8 @@
 {% bootstrap_javascript jquery=1 %}
 {% include "nav/nav.html" %}
 
-<h1>Create a startup shot!</h1>
-<p> Type in a part number to view already created startup shots.</p>
+
+{% include "startupshot/subMattecSummary.html" %}
 
 
 <form action="/startupshot/create/" method="post" class="form">
