Startup shot revamp stage two. User should only input part weight, and should not be able to input multiple start up shots

--- a/templates/startupshot/createStartupShot.html
+++ b/templates/startupshot/createStartupShot.html
@@ -15,7 +15,7 @@
 {% include "startupshot/subMattecSummary.html" %}
 
 
-<form action="/startupshot/create/" method="post" class="form">
+<form method="post" class="form">
     {% csrf_token %}
     {% bootstrap_form form layout='horizontal' %}
     {% buttons %}
