--- a/templates/startupshot/startUpShotSearch.html
+++ b/templates/startupshot/startUpShotSearch.html
@@ -12,6 +12,7 @@
 {% bootstrap_javascript jquery=1 %}
 
 {% include "nav/nav.html" %}
+<p>Type in a part number to see what has already been created.</p>
 
 <form action="/startupshot/" method="post" class="form">
     {% csrf_token %}
