--- a/templates/inspection/index.html
+++ b/templates/inspection/index.html
@@ -13,10 +13,9 @@
 
 <p>Welcome to the CIMC Inspection Page! The following machines are active:</p>
 
-
 <ul>
 {%  for each_part in active_parts %}
-    <li><a href="/inspection/{{ each_part.jobNumber }}">{{each_part.machNo }} - {{ each_part.item.item_Description }}</a></li>
+    <li><a href="/inspection/{{ each_part.jobNumber }}">{{ each_part.machNo }} - {{ each_part.itemDesc }}</a></li>
 {% endfor %}
 </ul>
 
