--- a/templates/inspection/partWeight.html
+++ b/templates/inspection/partWeight.html
@@ -13,7 +13,7 @@
 
 <h1>Part Weight!</h1>
 
-{% include "inspection/subJobInfo.html" %}
+{% include "inspection/subTemplates/subJobInfo.html" %}
 
 <form method="post" class="form">
    {% csrf_token %}
