--- a/templates/inspection/visualInspection.html
+++ b/templates/inspection/visualInspection.html
@@ -12,7 +12,7 @@
 
 {% include "nav/nav.html" %}
 
-{% include "inspection/subJobInfo.html" %}
+{% include "inspection/subTemplates/subJobInfo.html" %}
 
 <form method="post" class="form">
  {% csrf_token %}
