--- a/templates/inspection/detailJob.html
+++ b/templates/inspection/detailJob.html
@@ -11,7 +11,7 @@
 {% bootstrap_javascript jquery=1 %}
 {% include "nav/nav.html" %}
 
-{% include "inspection/subJobInfo.html" %}
+{% include "inspection/subTemplates/subJobInfo.html" %}
 
 {%  for ep in active_job %}
     <ul>
