--- a/templates/inspection/weightInspection.html
+++ b/templates/inspection/weightInspection.html
@@ -11,7 +11,7 @@
 {% bootstrap_javascript jquery=1 %}
 {% include "nav/nav.html" %}
 
-{% include "inspection/subJobInfo.html" %}
+{% include "inspection/subTemplates/subJobInfo.html" %}
 
 <form method="post" class="form">
     {% csrf_token %}
