Add PHL and MHL reports

--- a/templates/nav/nav.html
+++ b/templates/nav/nav.html
@@ -3,6 +3,6 @@
 <div class="navbar">
     {#    <a class="brand" href="/">My Site</a>#}
     <div class="navbar-inner">
-        {% sitetree_menu from "maintree" include "trunk,topmenu" template "sitetree/menu_bootstrap.html" %}
+{#        {% sitetree_menu from "maintree" include "trunk,topmenu" template "sitetree/menu_bootstrap.html" %}#}
     </div>
 </div>
