--- a/templates/phl/index.html
+++ b/templates/phl/index.html
@@ -14,12 +14,11 @@
 <p>Welcome to the Production History Log Page!</p>
 
 <ul>
-    <li><a href="/production_and_mold_history/production"></a>Record production related observation</li>
-    <li><a href="/production_and_mold_history/mold"></a>Record toolroom event</li>
-    <li><a href="/production_and_mold_history/production_report"></a>View production history log</li>
-    <li><a href="/production_and_mold_history/production_report"></a>View mold history log</li>
+    <li><a href="/production_and_mold_history/production">Record production related observation</a></li>
+    <li><a href="/production_and_mold_history/mold">Record toolroom event</a></li>
+    <li><a href="/production_and_mold_history/production_report">View production history log</a></li>
+    <li><a href="/production_and_mold_history/production_report">View mold history log</a></li>
 </ul>
-
 
 </body>
 </html>
