Add date to part/job report search

--- a/templates/nav/nav.html
+++ b/templates/nav/nav.html
@@ -1,8 +1,7 @@
 {% load sitetree %}
 
 <div class="navbar">
-    {#    <a class="brand" href="/">My Site</a>#}
     <div class="navbar-inner">
-{#        {% sitetree_menu from "maintree" include "trunk,topmenu" template "sitetree/menu_bootstrap.html" %}#}
+        {% sitetree_menu from "maintree" include "trunk,topmenu" template "sitetree/menu_bootstrap.html" %}
     </div>
 </div>
