--- a/templates/inspection/searchForms/jobReportSearch.html
+++ b/templates/inspection/searchForms/jobReportSearch.html
@@ -11,6 +11,7 @@
 {% bootstrap_javascript jquery=1 %}
 {% include "nav/nav.html" %}
 
+
 <p>Welcome to the CIMC Inspection Page! Type in a job number to generate a report:</p>
 
 <form method="post" class="form">
@@ -23,6 +24,9 @@
     {% endbuttons %}
 </form>
 
+{% include "date_templates/date_range.html" %}
 
 </body>
 </html>
+
+
