Add shot weight inspection, change old weight inspection to part weight inspection, figure out date range for reports

--- a/templates/inspection/subTemplates/subSummary.html
+++ b/templates/inspection/subTemplates/subSummary.html
@@ -1,3 +1,21 @@
+{% if InspectionDates %}
+    <table class="table table-hover">
+        <caption style="text-align:center">Date Range Summary</caption>
+        <tr>
+            <td>Job Started</td>
+            <td>Job Ended</td>
+        </tr>
+        <tr>
+            <td>
+                {{ InspectionDates.date_created__min }}
+            </td>
+            <td>
+                {{ InspectionDates.date_created__max }}
+            </td>
+        </tr>
+    </table>
+{% endif %}
+
 {% if visualInspectionDict %}
     <table class="table table-hover">
         <caption style="text-align:center">Visual Inspection Summary</caption>
