--- a/templates/inspection/subTemplates/subJobInfo.html
+++ b/templates/inspection/subTemplates/subJobInfo.html
@@ -14,6 +14,7 @@
             <td>Active Cavitation</td>
             <td>Average Part Weight</td>
             <td>Machine Number</td>
+            <td>Cycle Time</td>
         </tr>
         {%  for ep in active_job %}
             <tr>
