--- a/templates/phl/phl_index.html
+++ b/templates/phl/phl_index.html
@@ -16,7 +16,7 @@
 {% if activeInMattec %}
     <ul>
         {% for eachActive in activeInMattec %}
-            <li><a href="/production_and_mold_history/production/{{ eachActive.jobNumber }}/">{{ eachActive.machNo }}
+            <li><a href="/production_and_mold_history/production/{{ eachActive.jobNumber }}">{{ eachActive.machNo }}
                 - {{ eachActive.itemDesc }} </a>
             </li>
         {% endfor %}
