--- a/templates/phl/reports/phl.html
+++ b/templates/phl/reports/phl.html
@@ -16,7 +16,7 @@
 
 {% if active_job %}
     <table class="table table-hover">
-        <caption style="text-align:center">Start Up Shot Information</caption>
+        <caption style="text-align:center">Production History Log</caption>
         <tr>
             <td>Inspector Name</td>
             <td>Date Created</td>
