--- a/templates/inspection/forms/shotWeightInspection.html
+++ b/templates/inspection/forms/shotWeightInspection.html
@@ -6,13 +6,12 @@
 </head>
 <body>
 
-
 {% load bootstrap3 %}
 {% bootstrap_css %}
 {% bootstrap_javascript jquery=1 %}
-
 {% include "nav/nav.html" %}
-<p>Record a production related event.</p>
+
+{% include "inspection/subTemplates/subJobInfo.html" %}
 
 <form method="post" class="form">
     {% csrf_token %}
