--- a/templates/phl/forms/moldLookup.html
+++ b/templates/phl/forms/moldLookup.html
@@ -12,9 +12,9 @@
 {% bootstrap_javascript jquery=1 %}
 
 {% include "nav/nav.html" %}
-<p>Type in a part number to see what has already been created.</p>
+<p>TType in a mold number to record tooling related event.</p>
 
-<form action="/startupshot/" method="post" class="form">
+<form method="post" class="form">
     {% csrf_token %}
     {% bootstrap_form form layout='horizontal' %}
     {% buttons %}
