--- a/templates/phl/reports/mhl.html
+++ b/templates/phl/reports/mhl.html
@@ -11,7 +11,7 @@
 {% bootstrap_javascript jquery=1 %}
 {% include "nav/nav.html" %}
 
-{#{% include "inspection/subTemplates/subJobInfo.html" %}#}
+{% include "inspection/subTemplates/subJobInfo.html" %}
 
 {% if mold_info %}
     <table class="table table-hover">
